--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,268 +1,122 @@
 /*File for Basic-Portfolio for Jeanmarie Martinko*/
+/*Note: I modified some of the default styling in the "cyborg" bootstrap theme to my liking*/
  
 html {
     position: relative;
     min-height: 100%;
-    background: url("../images/paper_3.png");   
 }
 
-.wrapper {
-	width: 100%;	
-	display: block;
-	/*Note to self: This margin setting helps to "center" the 960px wrapper in browser */view ->
-	margin: auto;
+body {
 	font-size: 18px;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-}
-/*Header ---->*/
-#headBox {
-	background: #ffffff;
-	color: #ffffff;
-	height: 100px;
-	margin: 0;
-	border: 1px solid #cccccc;
-	margin-bottom: 20px;
-	position: relative;
-	box-sizing: border-box;
-	overflow: auto;
-	clear: both;
+	background: url("../images/swirl_pattern.png"); 
 }
 
-#navBar {
-	background: #ffffff;
-	width: 230px;
-	height: 100px;
-	float: right;
-	margin-right: 355px;
-	text-align: right;
-	display: flex;
-	align-items: center;
+/*Added padding since default didn't look as nice without it.*/
+.navbar {
+padding: 10px;
 }
 
-a  {
-	/*color: #777777;*/
+.navbar-brand {
+font-size: 35px;
 }
 
-.nav {
-
-	text-align: right;
-	color: #777777;
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-
-}
-.nav:hover { 
-  color: #ffffff;
-  background-color: #4aaaa5;
-  opacity: 0.75;
-}
-
-.nav:focus {  
-	color: #ffffff;
-	background-color: #777777; 
-}
-/*This is the JM "logo" that appears at the top of each page.*/
-#jmNamebox {
-	width: 400px;
-	height: 100px;
-	letter-spacing: 1.2px;
+.panel-heading {
 	background: #4aaaa5;
-	color: #ffffff;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 26px;
-	margin-left: 355px;
-	position: absolute;
-	overflow: auto;
 }
-/*This is the wrapper for both the "bio" section box and the "connect with me" box*/
-#container {
-	margin-bottom: 20px;
-	/*overflow: auto;
-	clear: both;*/
+
+.container {
 	box-sizing: border-box;
-	width: 960px;
-	margin: auto;
+	size: 960px;
 }
 
-/*This is the box containing "about me," my profile pic and some text*/
-.main-box {
-	display: inline-block;
-	background-color: #ffffff;
-	border: 1px solid #dddddd;
-	box-sizing: border-box;
-	width: 650px;
-	padding: 30px;
-}
-
-/*"secBox"is the area in the bio content box that starts with "About Me","Portfolio" and "Contact"*/
-.secBox {
-
-	padding-left: 25px;
-	padding-right: 25px;
-	/*font-size: 24px;
-	font-weight: bold;
-	letter-spacing: 1.2px;*/
-}
-/*
-.menuBox {
-
-	display: block; 
-	align-items: center; 
-	justify-content;
+/*#caption {
+	font-style: italic;
+	font-size: 14px;
 }*/
 
-/*My "first" profile pic, followed by a "second" pic when hovered over with mouse*/
-#profilePic {
-
-	font-size: 14px;
-	font-style: italic;
-	text-align: center;
-	float: left;
-}
-
-
-
 #jmPic {
-	float: left;
-	margin-left: 20px;
-	margin-right: 10px;
-	width: 160px;
-	height: 160px;
-	clear: both;
+	border-radius: 8px;	
 }
-
 
 #jmPic:hover {
  background-image: url("assets/images/elijah.jpg");
- opacity: 1;
 }
 
-p {
-	margin-left: 20px;
-	line-height: 150%;
-	line-height: 1.5;
-}	
-
-h1 {
-	color: #4aaaa5;
-	font-family: Georgia, Times, "Times New Roman", serif;
-	font-weight: bold;
-	font-size: 24px;
-}
-
-h2, h3 { 
-	color: #4aaaa5;
-	font-family: Georgia, Times, "Times New Roman", serif;
-	font-weight: bold;
-	font-size: 18px;
-
-}
-
-/*This is the "aside"/sidebox with social media icons*/
-#connectBox {
-	float: right;
-	width: 270px;
-	letter-spacing: 1.2px;
-	background-color: #ffffff;
-	border: 1px solid #dddddd;
-	display: inline-block;
+.panel-body {
+	padding: 20px;
 	box-sizing: border-box;
-	padding: 30px;
-  	/*position: relative;*/
-  	color: #4aaaa5;
-  	text-align: center;
-  	clear: both;
 }
+
+.panel-title {
+	color: #ffffff;
+	font-size: 30px;
+	letter-spacing: 1.5;
+}
+
+/*Specified smaller font*/
+#sidePanel {
+	font-size: 20px;
+}
+
 /*This refers to the logos for social media sites*/
 #logos {
-	display: inline;
-	width: 55px;
-	height: 55px;
-	margin-right: 8px;
+	width: 95px;
+	height: 95px;	
 }
 
-/*Makes social icon logos transparent on hover prior to clicking*/
-img:hover {
-    opacity: 0.5;
+/*This will provide some "graying/opacity" when hovering over social media logos*/
+#logos:hover {
+	opacity: 0.5;
 }
 
-
-#footBox {
-	height: 100px;
-	width: 100%;
-	box-sizing: border-box;
-	border: 5px;
-	border-top-style: solid;
-	border-top-color: #4aaaa5;
-	background: #666666;
-	color: #ffffff;
-	font-size: 16px;
-    position: absolute;
-    bottom: 0; 
-    display: inline-flex;
-  	align-items: center;
-  	justify-content: center;  
-}
-
+/*The ".box" and ".banner classes are to format the portfolio menu images and text*/
 .box {
-	display: inline;
-	margin-left: 40px;
 	box-sizing: border-box;
 	width: 220px;
 	height: 180px;
 	padding: 10px;
-	float: left;
+	padding-bottom: 20px;
 	display:inline-flex;
 	position: relative;
-	align-items: center;
-	justify-content: center	
- }
+}
 
 .banner {
 	position: absolute;
 	width: 200px;
-	bottom: 25px;
-	margin-left: 20px;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
+	bottom: 10px;
+	margin-left: 10px;
 	color: #ffffff;
 	background-color: #4aaaa5;
 	text-align: center;
-	overflow: auto;
+	font-size: 18px;	
 }
 
-#contact-form {
-	margin: 30px;
-	input: wide;
-}
-	
-input {
-	width: 100%;
-    margin: 8px 0;
-    box-sizing: border-box;
-    box-sizing: border-box;
-    border-radius: 4px;
-    border: 2px solid #dddddd;
-}
-
-#submit-button {
-
-	width: 20%;
-	background-color: #4aaaa5;
+/*Modifed "cyborg" theme button colors*/
+.btn  {
+	background: #4aaaa5;
 	color: #ffffff;
 }
 
-#regular-box {
-
-	padding: 12px 20px;
-	resize: both;
+/* Modified "cyborg" theme footer styling*/
+.footer {
+	border-top-style: solid;
+	border-top-width: 10px;
+	border-top-color: #4aaaa5;
+	background: black;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 90px;
+	vertical-align: center;
+  	justify-content: center;
+  	padding: 30px;
+	font-style: italic;
 }
 
 
 
-#message-box {
-	padding: 100px 20px;
-	resize: vertical;		   	
-}
+
+
+
+
+
