--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,28 +29,17 @@ font-size: 35px;
 	size: 960px;
 }
 
-/*#caption {
-	font-style: italic;
-	font-size: 14px;
-}*/
-
 a {
-
 	text-align: center;
-
 }
 
 p {
-
 	text-align: left;
 }
 
 #jmPic {
-
 	border-radius: 8px;
-
 }
-
 
 #jmPic:hover {
  background-image: url("assets/images/elijah.jpg");
@@ -64,7 +53,6 @@ p {
 	/*justify-content: left;*/
 }
 
-
 .panel-title {
 	color: #ffffff;
 	font-size: 30px;
@@ -76,7 +64,7 @@ p {
 	font-size: 20px;
 }
 
-/*This refers to the logos for social media sites*/
+/*Placeholder in case I want to go back to "px" from "%". This refers to the logos for social media sites*/
 /*#logos {
 	width: 95px;
 	height: 95px;	
@@ -84,7 +72,7 @@ p {
 
 
 #logos {
-	width: 30%;
+	width: 35%;
    height: 80%;
    display: inline-block;
    /*text-align: center;*/
@@ -105,7 +93,6 @@ p {
 	padding-bottom: 20px;
 	display:inline-block;
 	position: relative;
-
 }
 
 .banner {
