--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,8 +72,8 @@ p {
 
 
 #logos {
-	width: 35%;
-   height: 80%;
+	width: 95px;
+   height: 95px;
    display: inline-block;
    /*text-align: center;*/
    margin: 0 auto;
